--- a/t.yaml
+++ b/t.yaml
@@ -9,12 +9,9 @@ proxies:
   - {name: 新加坡A | 深港隧道, server: 120.240.86.101, port: 45144, type: vmess, uuid: 22409413-b8bf-418a-bbdd-e87790b918dd, alterId: 1, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-opts: {path: /api/sg, headers: {Host: sgav2.ddns.tjiasu.xyz}}, udp: true}
   - {name: 美国A | 微软云加速, server: az.01.nkeo.top, port: 25078, type: vmess, uuid: 22409413-b8bf-418a-bbdd-e87790b918dd, alterId: 1, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-opts: {path: /api/common, headers: {Host: usav2.ddns.tjiasu.xyz}}, udp: true}
   - {name: 美国B | 微软云加速, server: az.01.nkeo.top, port: 25079, type: vmess, uuid: 22409413-b8bf-418a-bbdd-e87790b918dd, alterId: 1, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-opts: {path: /api/rn, headers: {Host: usbv2.ddns.tjiasu.xyz}}, udp: true}
-  - {name: "🇸🇬 [备用] 新加坡A | 深港隧道", server: 120.240.86.101, port: 45144, type: vmess, uuid: e0a62e3a-1643-4c2d-8afb-9ed0c945ee37, alterId: 1, cipher: auto, tls: true, network: ws, ws-opts: {path: /api/sg, headers: {Host: sgav2.ddns.tjiasu.xyz}}}
+  - {name: "🇸🇬 [备用] 新加坡-长沙联通BGP入口", server: 116.162.33.210, port: 25049, type: vmess, uuid: e0a62e3a-1643-4c2d-8afb-9ed0c945ee37, alterId: 1, cipher: auto, tls: true, network: ws, ws-opts: {path: /api/sg, headers: {Host: sgav2.ddns.tjiasu.xyz}}}
   - {name: "🇺🇸 [备用] 美国A | 微软云加速", server: az.01.nkeo.top, port: 25078, type: vmess, uuid: e0a62e3a-1643-4c2d-8afb-9ed0c945ee37, alterId: 1, cipher: auto, tls: true, network: ws, ws-opts: {path: /api/common, headers: {Host: usav2.ddns.tjiasu.xyz}}}
   - {name: "🇺🇸 [备用] 美国B | 微软云加速", server: az.01.nkeo.top, port: 25079, type: vmess, uuid: e0a62e3a-1643-4c2d-8afb-9ed0c945ee37, alterId: 1, cipher: auto, tls: true, network: ws, ws-opts: {path: /api/rn, headers: {Host: usbv2.ddns.tjiasu.xyz}}}
-  - {name: "🇸🇬 [Lv.1] 新加坡A | 长沙联通", server: 116.162.33.210, port: 25049, type: vmess, uuid: 41297c23-c3e3-4e17-9ec4-f3a6cb6d2e68, alterId: 1, cipher: auto, tls: true, network: ws, ws-path: /api/sg, ws-headers: {Host: sgav2.ddns.tjiasu.xyz}}
-  - {name: "🇺🇸 [Lv.1] 美国A | 微软云加速", server: az.01.nkeo.top, port: 25078, type: vmess, uuid: 41297c23-c3e3-4e17-9ec4-f3a6cb6d2e68, alterId: 1, cipher: auto, tls: true, network: ws, ws-path: /api/common, ws-headers: {Host: usav2.ddns.tjiasu.xyz}}
-  - {name: "🇺🇸 [Lv.1] 美国B | 微软云加速", server: az.01.nkeo.top, port: 25079, type: vmess, uuid: 41297c23-c3e3-4e17-9ec4-f3a6cb6d2e68, alterId: 1, cipher: auto, tls: true, network: ws, ws-path: /api/rn, ws-headers: {Host: usbv2.ddns.tjiasu.xyz}}
   - {name: 【推荐】微软云加速-Hax, server: az.01.nkeo.top, port: 25081, type: vmess, uuid: 153b2844-2833-4002-fca6-d5ff0395f8af, alterId: 0, cipher: auto, tls: true, network: ws, ws-path: /godlike, ws-headers: {Host: hax0.klee.ml}}
 proxy-groups:
   - name: Proxies
@@ -25,12 +22,9 @@ proxy-groups:
       - 新加坡A | 深港隧道
       - 美国A | 微软云加速
       - 美国B | 微软云加速
-      - 🇸🇬 [备用] 新加坡A | 深港隧道
+      - 🇸🇬 [备用] 新加坡-长沙联通BGP入口
       - 🇺🇸 [备用] 美国A | 微软云加速
       - 🇺🇸 [备用] 美国B | 微软云加速
-      - 🇸🇬 [Lv.1] 新加坡A | 长沙联通
-      - 🇺🇸 [Lv.1] 美国A | 微软云加速
-      - 🇺🇸 [Lv.1] 美国B | 微软云加速
 rules:
  - GEOIP,CN,DIRECT
  - MATCH,Proxies
