--- a/t.yaml
+++ b/t.yaml
@@ -12,13 +12,13 @@ proxies:
   - {name: "🇸🇬 [备用] 新加坡-长沙联通BGP入口", server: 116.162.33.210, port: 25049, type: vmess, uuid: e0a62e3a-1643-4c2d-8afb-9ed0c945ee37, alterId: 1, cipher: auto, tls: true, network: ws, ws-opts: {path: /api/sg, headers: {Host: sgav2.ddns.tjiasu.xyz}}}
   - {name: "🇺🇸 [备用] 美国A | 上海移动高速入口", server: 117.185.229.112, port: 25064, type: vmess, uuid: e0a62e3a-1643-4c2d-8afb-9ed0c945ee37, alterId: 1, cipher: auto, tls: true, network: ws, ws-opts: {path: /api/common, headers: {Host: usav2.ddns.tjiasu.xyz}}}
   - {name: "🇺🇸 [备用] 美国B | 微软云加速", server: az.01.nkeo.top, port: 25079, type: vmess, uuid: e0a62e3a-1643-4c2d-8afb-9ed0c945ee37, alterId: 1, cipher: auto, tls: true, network: ws, ws-opts: {path: /api/rn, headers: {Host: usbv2.ddns.tjiasu.xyz}}}
-  - {name: 【推荐】微软云加速-Hax, server: az.01.nkeo.top, port: 25081, type: vmess, uuid: 153b2844-2833-4002-fca6-d5ff0395f8af, alterId: 0, cipher: auto, tls: true, network: ws, ws-path: /godlike, ws-headers: {Host: hax0.klee.ml}}
+  - {name: 【推荐】Hax | 江门移动高速入口, server: 120.240.48.25, port: 25047, type: vmess, uuid: 153b2844-2833-4002-fca6-d5ff0395f8af, alterId: 0, cipher: auto, tls: true, network: ws, ws-path: /godlike, ws-headers: {Host: hax0.klee.ml}}
 proxy-groups:
   - name: Proxies
     type: select
     proxies:
       - 【推荐】流媒体解锁-Hax
-      - 【推荐】微软云加速-Hax
+      - 【推荐】Hax | 江门移动高速入口
       - 新加坡A | 长沙联通BGP入口
       - 美国A | 上海移动高速入口
       - 美国B | 微软云加速
